@@ -633,6 +633,9 @@ Release 2.7.2 - 2016-01-25
 
     YARN-4281. 2.7 RM app page is broken (Chang Li via jlowe)
 
+    YARN-2871. TestRMRestart#testRMRestartGetApplicationList sometime fails in trunk.
+    (zhihai xu via xgong)
+
 Release 2.7.1 - 2015-07-06
 
   INCOMPATIBLE CHANGES
